# SocketChat

./: .clang-format  CMakeLists.txt  ChatServer  README.md  chat_client.html  chat_server.cpp  compile_commands.json  http_response.cpp  http_response.h  main.cpp
backup/: Server.cpp  Server.h
database/: SQLiteManager.h  schema.sql
docs/: SocketChat.md
include/: ChatRoom.h  ChatServer.h  DBManager.h  HttpResponse.h  MessageDef.h  Server.h  Session.h  Socket.h  Token.h  TypeDef.h  UserSession.h  Utils.h
include/DataAccessObject/: ChatRoom.h  Helper.h  Message.h  User.h
src/: ChatRoom.cpp  ChatServer.cpp  HttpResponse.cpp  Server.cpp  Session.cpp  Socket.cpp  Token.cpp  Utils.cpp  main.cpp
src/DataAccessObject/: ChatRoom.cpp  Helper.cpp  Message.cpp  User.cpp
test/: Chatserver.cpp  init_test_db.sql  test.db
